==> hso-esk/emb6/target/mcu/efm32lg990f256/efm32lg990.c <==
#include "emb6.h"
#include "emb6_conf.h"
#include "target.h"
#include "hwinit.h"
#include "bsp.h"
#include "board_conf.h"
#include "em_device.h"
#include "em_chip.h"
#include "em_cmu.h"
#include "em_wdog.h"
#include "em_int.h"
#include "em_gpio.h"
#include "spidrv.h"
#include "em_usart.h"
#include "em_timer.h"
#include "gpiointerrupt.h"
#define     LOGGER_ENABLE        LOGGER_HAL
#include    "logger.h"

static void _hal_tcInit(void)
{
    uint32_t l_ticks;
    TIMER_TypeDef* ps_timer = TIMER1;
    TIMER_Init_TypeDef s_timerInit = TIMER_INIT_DEFAULT;

    s_timerInit.enable = true;
    s_timerInit.prescale = timerPrescale2;
    s_timerInit.riseAction = timerInputActionReloadStart;

    /* caluclate ticks */
    l_ticks = SystemHFClockGet() / 2 / 1000;

    /* configure timer for 1ms */
    TIMER_TopSet( ps_timer, l_ticks );
    /* enable timer interrupts */
    NVIC_DisableIRQ( TIMER1_IRQn );
    NVIC_ClearPendingIRQ( TIMER1_IRQn );
    NVIC_EnableIRQ( TIMER1_IRQn );
    TIMER_IntEnable( ps_timer, TIMER_IEN_OF );

    /* initialize and start timer */
    TIMER_Init( ps_timer, &s_timerInit );

}

int8_t hal_init (void)
{
    /* reset callback */
    pf_hal_radioCb = NULL;

    /* initialize Chip */
    CHIP_Init();

    /* initialize clocks */
    _hal_clksInit();

    /* initialize watchdog */
    _hal_wdcInit();

    /* initialize SysTicks */
    _hal_tcInit();


    return 1;
}

uint8_t hal_extIntInit(en_targetExtInt_t e_intSource, pfn_intCallb_t pfn_intCallback)
{
    int8_t    c_ret = 0;
    s_hal_gpio_pin_t* p_gpioPin = NULL;

    if( pfn_intCallback != NULL ) {

      /* Initialize GPIO interrupt dispatcher */
      GPIOINT_Init();

      switch( e_intSource ){
        case E_TARGET_RADIO_INT:

            pf_hal_radioCb = pfn_intCallback;

            p_gpioPin = &s_hal_gpio[e_hal_gpios_rf_irq];
            /* configure pin */
            GPIO_PinModeSet( p_gpioPin->port, p_gpioPin->pin, p_gpioPin->mode, p_gpioPin->val );
            /* Register callbacks before setting up and enabling pin interrupt. */
            GPIOINT_CallbackRegister( p_gpioPin->pin, _hal_radioCb );
            /* Set falling edge interrupt */
            GPIO_IntConfig( p_gpioPin->port, p_gpioPin->pin, true, false, true );
            c_ret = 1;
            break;

        case E_TARGET_USART_INT:
            break;

        default:
            break;
        }
    }
    return c_ret;
}

void* hal_ctrlPinInit(en_targetExtPin_t e_pinType)
{
    s_hal_gpio_pin_t* p_gpioPin = NULL;

    switch (e_pinType){
        case E_TARGET_RADIO_RST:

            p_gpioPin = &s_hal_gpio[e_hal_gpios_rf_rst];
            /* configure pin */
            GPIO_PinModeSet( p_gpioPin->port, p_gpioPin->pin, p_gpioPin->mode, p_gpioPin->val );
            /* set pin */
            GPIO_PinOutSet( p_gpioPin->port, p_gpioPin->pin );
            break;

        case E_TARGET_RADIO_SLPTR:

            p_gpioPin = &s_hal_gpio[e_hal_gpios_rf_slp];
            /* configure pin */
            GPIO_PinModeSet( p_gpioPin->port, p_gpioPin->pin, p_gpioPin->mode, p_gpioPin->val );
            /* set pin */
            GPIO_PinOutSet( p_gpioPin->port, p_gpioPin->pin );
            break;

        default:

            p_gpioPin = NULL;
            break;
    }

    return p_gpioPin;
}

void hal_pinSet(void * p_pin)
{
    s_hal_gpio_pin_t* p_gpioPin;

    if( p_pin != NULL ) {
        p_gpioPin = ( s_hal_gpio_pin_t* )p_pin;
        p_gpioPin->val = 1;
        GPIO_PinOutSet( p_gpioPin->port, p_gpioPin->pin );
    }
}

void hal_pinClr(void * p_pin)
{
    s_hal_gpio_pin_t* p_gpioPin;

    if( p_pin != NULL ) {
        p_gpioPin = (s_hal_gpio_pin_t*)p_pin;
        p_gpioPin->val = 0;
        GPIO_PinOutClear( p_gpioPin->port, p_gpioPin->pin );
    }
}

uint8_t    hal_pinGet(void * p_pin)
{
    s_hal_gpio_pin_t* p_gpioPin;

    if(p_pin == NULL) {
        return 0;
    }
    p_gpioPin = (s_hal_gpio_pin_t*)p_pin;
    if( p_gpioPin->mode != gpioModeInput )
        return p_gpioPin->val;
    else
        return GPIO_PinInGet( p_gpioPin->port, p_gpioPin->pin );
}

void* hal_spiInit(void)
{
    /* configure SPI */
    SPIDRV_Init_t spiInit = EFM32_USART;
    spiInit.portLocation = EFM32_USART_LOC;
    spiInit.csControl = spidrvCsControlApplication;

    /* initialize SPI */
    s_hal_spi.pHndl = &s_hal_spi.hndl;
    SPIDRV_Init( s_hal_spi.pHndl, &spiInit );

    /* configure manual chip select pin */
    GPIO_PinModeSet( s_hal_spi.csPin.port, s_hal_spi.csPin.pin,
            s_hal_spi.csPin.mode, s_hal_spi.csPin.val );
    /* set chip select pin */
    GPIO_PinOutSet( s_hal_spi.csPin.port, s_hal_spi.csPin.pin );

    return &s_hal_spi;
}

uint8_t hal_spiSlaveSel(void * p_spi, bool action)
{
    s_hal_spiDrv* p_spiHal;

    if (p_spi == NULL) {
        LOG_ERR("SPI was not initialized!");
        return 0;
    }

    p_spiHal = (s_hal_spiDrv*)p_spi;

    if (action) {
        //! [select_slave]
        /* clear chip select pin */
        hal_enterCritical();
        GPIO_PinOutClear( p_spiHal->csPin.port, p_spiHal->csPin.pin );
        //! [select_slave]
    }
    else {
        /* set chip select pin */
        GPIO_PinOutSet( p_spiHal->csPin.port, p_spiHal->csPin.pin );
        hal_exitCritical();
    }
    return 1;
}

uint8_t hal_spiRead(uint8_t * p_reg, uint16_t i_length)
{
    //SPIDRV_MReceiveB( s_hal_spi.pHndl, p_reg, i_length );
    for( int i = 0; i < i_length; i++ )
        p_reg[i] = USART_SpiTransfer( s_hal_spi.pHndl->initData.port, 0 );
    return *p_reg;
}

void hal_spiWrite(uint8_t * c_value, uint16_t i_length)
{
    //SPIDRV_MTransmitB( s_hal_spi.pHndl, c_value, i_length );
    for( int i = 0; i < i_length; i++ )
        USART_SpiTransfer( s_hal_spi.pHndl->initData.port, c_value[i] );
}
